@@ -4,6 +4,8 @@ CHANGES IN FLTK 1.1.2
 	  text widgets.
 	- Fl_Check_Browser didn't provide const char * add
 	  methods as documented.
+	- Fl_Check_Browser didn't draw the same style of check
+	  marks at the other widgets.
 	- Fl_Button, Fl_Choice, and Fl_Menu_Button incorrectly
 	  activated the button/menu when the spacebar was
 	  pressed in conjunction with shift, control, alt, or
